--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "material-design-icons"]
 	path = material-design-icons
-	url = git@github.com:google/material-design-icons.git
+	url = https://github.com/google/material-design-icons.git
