--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "material-design-icons"]
-	path = material-design-icons
-	url = https://github.com/google/material-design-icons.git
+[submodule "MaterialDesign"]
+	path = MaterialDesign
+	url = https://github.com/Templarian/MaterialDesign.git
